@@ -1051,6 +1051,14 @@ for the library to consider it too slow and abort.
 Pass a long as parameter. It contains the time in seconds that the transfer
 should be below the \fICURLOPT_LOW_SPEED_LIMIT\fP for the library to consider
 it too slow and abort.
+.IP CURLOPT_MAX_SEND_SPEED_LARGE
+Pass a curl_off_t as parameter.  If an upload exceeds this speed on cumulative 
+average during the transfer, the transfer will pause to keep the average rate 
+less than or equal to the parameter value.  (default: 0, unlimited)
+.IP CURLOPT_MAX_RECV_SPEED_LARGE
+Pass a curl_off_t as parameter.  If an upload exceeds this speed on cumulative 
+average during the transfer, the transfer will pause to keep the average rate 
+less than or equal to the parameter value.  (default: 0, unlimited)
 .IP CURLOPT_MAXCONNECTS
 Pass a long. The set number will be the persistent connection cache size. The
 set amount will be the maximum amount of simultaneously open connections that
